--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">Vamos entrar em contato!</h2>
             <hr class="my-4">
             <p class="mb-5">Pronto para começar seu próximo projeto conosco? Isso é ótimo! Ligue para nós ou envie-nos um e-mail e entraremos em contato o mais breve possível!</p>
           </div>
