--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a href="http://liveacademy.eastus.cloudapp.azure.com">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+              <img src="img/portfolio/thumbnails/1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
