--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a href="http://liveacademy.eastus.cloudapp.azure.com">
-              <img src="img/portfolio/thumbnails/1.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -152,7 +152,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a  href="http://fotofonica.com.br/">
+            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -167,7 +167,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a  href="http://sianta.com.br/">
+            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -182,7 +182,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a href="http://www.pequeninar.com.br/">
+            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
               <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
