--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sobre</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Saiba mais</a>
           </div>
         </div>
       </div>
