--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="row no-gutters ">
        
             <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="http://liveacademy.eastus.cloudapp.azure.com/">
+              <a class="portfolio-box" href="http://liveacademy.eastus.cloudapp.azure.com/" target="_blank">
                 <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -154,7 +154,7 @@
           </div>
           
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="http://fotofonica.com.br/">
+            <a class="portfolio-box" href="http://fotofonica.com.br/" target="_blank">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -169,7 +169,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="http://sianta.com.br/">
+            <a class="portfolio-box" href="http://sianta.com.br/" target="_blank">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -184,7 +184,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="http://pequeninar.com.br/">
+            <a class="portfolio-box" href="http://pequeninar.com.br/" target="_blank">
               <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
