--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <title>Paulo Henrique Pires</title>
 
+    <link rel="icon" href="img/favicon.ico">
+    
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
