--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Paulo Henrique Pires</title>
 
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon%20(2).ico">
     
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
