--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row no-gutters ">
        
             <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="http://liveacademy.eastus.cloudapp.azure.com/" target="_blank">
+              <a class="portfolio-box" href="http://liveacademy.brazilsouth.cloudapp.azure.com" target="_blank">
                 <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
