--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
        
             <div class="col-lg-4 col-sm-6">
               <a class="portfolio-box" href="http://liveacademy.brazilsouth.cloudapp.azure.com" target="_blank">
-                <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+                <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-19-35.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
+                      Projeto
                     </div>
                     <div class="project-name">
                       Liveacademy
@@ -161,7 +161,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projeto
                   </div>
                   <div class="project-name">
                     Fotofonica
@@ -176,7 +176,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projeto
                   </div>
                   <div class="project-name">
                     Sianta
@@ -191,7 +191,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projeto
                   </div>
                   <div class="project-name">
                     Pequeninar
@@ -206,7 +206,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projeto
                   </div>
                   <div class="project-name">
                     Project Name
@@ -216,15 +216,15 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <a class="portfolio-box" href="http://devolva.me/">
+              <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-17-46.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projeto
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Devolva me
                   </div>
                 </div>
               </div>
