--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="http://fotofonica.com.br/" target="_blank">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-32-28.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -172,7 +172,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="http://sianta.com.br/" target="_blank">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-27-04.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -187,7 +187,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="http://pequeninar.com.br/" target="_blank">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-30-54.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
