--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <a class="portfolio-box" href="http://www.veber.ind.br/">
+              <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-44-15.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
