--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     Projeto
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Veber
                   </div>
                 </div>
               </div>
