--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p class="text-faded mb-5">Criação de sites estilo landing page, hotsite, portifolio, vitrini e criação de sistemas avançados</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Saiba mais</a>
           </div>
         </div>
@@ -85,7 +85,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Sobre</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p class="text-faded mb-4">Conhecimento com CSS3, HTML5, JS, ANGULAR, PHP, SYMFONY, LARAVEL, DOCKER</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Serviços</a>
           </div>
         </div>
@@ -107,21 +107,21 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Sistemas sob demanda</h3>
-              <p class="text-muted mb-0">Criação do sistema desde a analize até a entrega final</p>
+              <p class="text-muted mb-0">Criação do sistema desde a analize inicial até a entrega final</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Site a seu gosto</h3>
-              <p class="text-muted mb-0">Criação de site a partir de uma imagem final/prototipo</p>
+              <h3 class="mb-3">Hospedagem</h3>
+              <p class="text-muted mb-0">O você escolhe a melhor opção</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Relatorio</h3>
-              <p class="text-muted mb-0">Plugins que geram relatirios de acompanhamento do site</p>
+              <p class="text-muted mb-0">Relatirios de acompanhamento do site</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
