--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row no-gutters ">
        
             <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="http://liveacademy.brazilsouth.cloudapp.azure.com" target="_blank">
+              <a class="portfolio-box" href="https://minhaclasse.com" target="_blank">
                 <img class="img-fluid" src="img/portfolio/thumbnails/Captura de tela de 2018-06-28 12-19-35.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -148,7 +148,7 @@
                       Projeto
                     </div>
                     <div class="project-name">
-                      Liveacademy
+                      Minha Classe
                     </div>
                   </div>
                 </div>
