--- a/index.html
+++ b/index.html
@@ -133,18 +133,33 @@
         <div class="grid-layout">
           <h2 id="experience-title" class="delaySmallReveal">Experiências <span>.</span></h2>
           <div id="experience">
-            <div class="option-experience intervalCardReveal" id="experience-company">
-              <div class="company foccos activeExperience"><h3>Foccos</h3></div>
-              <div class="company noxie"><h3>Noxie</h3></div>
-              <div class="company ani"><h3>A.N.I Sistemas</h3></div>
-              <div class="company pulses"><h3>Pulses Gupy</h3></div>
-              <div class="company convert"><h3>Convertter</h3></div>
-              <div class="company geosapiens"><h3>GeoSapiens</h3></div>
+            <div
+              class="option-experience intervalCardReveal"
+              id="experience-company"
+            >
+              <div class="company foccos activeExperience">
+                <h3>Foccos</h3>
+              </div>
+              <div class="company noxie">
+                <h3>Noxie</h3>
+              </div>
+              <div class="company ani">
+                <h3>A.N.I Sistemas</h3>
+              </div>
+              <div class="company pulses">
+                <h3>Pulses Gupy</h3>
+              </div>
+              <div class="company convert">
+                <h3>Convertter</h3>
+              </div>
+              <div class="company geosapiens">
+                <h3>GeoSapiens</h3>
+              </div>
             </div>
             
             <div class="text-experience intervalCardReveal">
               <div>
-                <p class="dateExperience">Atual</p>
+                <p class="dateExperience">Jun 2023 - Atualmente</p>
               </div>
               <h5 class="companyExperience">Foccos Tecnologia</h5>
               <p id="experience-description" class="changeExperience">
